lab21/deployments/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio-injection: enabled
