lab21/deployments/1-deployment-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab21-v1
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab21
      version: v1
  template:
    metadata:
      labels:
        app: lab21
        version: v1
        istio: monitor
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: api
          image: danil1digits0nly/lab21-api:1.0
          ports:
            - containerPort: 8080
        - name: frontend
          image: danil1digits0nly/lab21-frontend:1.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
