lab21/deployments/2-deployment-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab21-v2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab21
      version: v2
  template:
    metadata:
      labels:
        app: lab21
        version: v2
        istio: monitor
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: api
          image: danil1digits0nly/lab21-api:1.0
          ports:
            - containerPort: 8080
        - name: frontend
          image: danil1digits0nly/lab21-frontend:1.4
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: lab21
#spec:
#  selector:
#    app: lab21
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: lab21
#  labels:
#    app: lab21
#spec:
#  rules:
#    - host: lab21
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: lab21
#                port:
#                  number: 80
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: lab21-gateway
#spec:
#  selector:
#    istio: gateway
#  servers:
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#      hosts:
#        - "*"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: lab21-vs
#spec:
#  hosts:
#    - "*"
#  gateways:
#    - lab21-gateway
#  http:
#    - match:
#        - uri:
#            prefix: /
#      route:
#        - destination:
#            host: lab21
#            port:
#              number: 80
