lab21/deployments/1-deployment-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab21-api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab21-api
      version: v1
  template:
    metadata:
      labels:
        app: lab21-api
        version: v1
        istio: monitor
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: api
          image: danil1digits0nly/lab21-api:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lab21-api
  namespace: dev
spec:
  selector:
    app: lab21-api
  ports:
    - name: http
      port: 8080
