lab21/deployments/3-lab21-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lab21
  namespace: dev
spec:
  selector:
    app: lab21
  ports:
    - name: http
      port: 80
