lab21/deployments/5-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lab21
  namespace: dev
spec:
  hosts:
    - "90.156.213.50"
  gateways:
    - lab21-gateway
  http:
#    Для роутов с префиксом сервис предопределен
    - match:
        - uri:
            prefix: /v1
      route:
        - destination:
            host: lab21
            subset: v1
    - match:
        - uri:
            prefix: /v2
      route:
        - destination:
            host: lab21
            subset: v2
#     Для всех остальных запросов версия определяется случайно в пропорциях 30/70
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: lab21
            subset: v1
          weight: 70
        - destination:
            host: lab21
            subset: v2
          weight: 30
